--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -85,6 +85,133 @@ crafting {
 }
 
 
+"enabled blocks" {
+    B:appeng.block.misc.BlockQuartzFixture=true
+    B:appeng.block.misc.BlockTinyTNT=true
+    B:appeng.decorative.solid.BlockChargedQuartzOre=true
+    B:appeng.decorative.solid.BlockChiseledQuartz=true
+    B:appeng.decorative.solid.BlockFluix=true
+    B:appeng.decorative.solid.BlockQuartz=true
+    B:appeng.decorative.solid.BlockQuartzGlass=true
+    B:appeng.decorative.solid.BlockQuartzLamp=true
+    B:appeng.decorative.solid.BlockQuartzOre=true
+    B:appeng.decorative.solid.BlockQuartzPillar=true
+    B:appeng.decorative.solid.BlockSkyStone=true
+    B:cofh.thermalfoundation.block.BlockOre=true
+    B:cofh.thermalfoundation.block.BlockOreFluid=true
+    B:cofh.thermalfoundation.block.BlockRockwool=true
+    B:cofh.thermalfoundation.block.BlockStorage=true
+    B:cofh.thermalfoundation.block.BlockStorageAlloy=true
+    B:cofh.thermalfoundation.block.BlockStorageResource=true
+    B:com.blakebr0.extendedcrafting.block.BlockBasic=true
+    B:com.blakebr0.extendedcrafting.block.BlockStorage=true
+    B:com.blakebr0.extendedcrafting.block.BlockTrimmed=true
+    B:com.jaquadro.minecraft.storagedrawers.block.BlockTrim=true
+    B:com.jolteffect.thermalsolars.block.BlockEnderBlock=true
+    B:com.jolteffect.thermalsolars.block.BlockEnderOreEnd=true
+    B:com.jolteffect.thermalsolars.block.BlockLunarBlock=true
+    B:com.jolteffect.thermalsolars.block.BlockLunarOreNether=true
+    B:com.jolteffect.thermalsolars.block.BlockTitaniumBlock=true
+    B:com.jolteffect.thermalsolars.block.BlockTitaniumOre=true
+    B:micdoodle8.mods.galacticraft.core.blocks.BlockBasic=true
+    B:micdoodle8.mods.galacticraft.core.blocks.BlockBasicMoon=true
+    B:micdoodle8.mods.galacticraft.core.blocks.BlockConcealedRedstone=true
+    B:micdoodle8.mods.galacticraft.core.blocks.BlockConcealedRepeater=true
+    B:micdoodle8.mods.galacticraft.planets.asteroids.blocks.BlockBasicAsteroids=true
+    B:micdoodle8.mods.galacticraft.planets.mars.blocks.BlockBasicMars=true
+    B:micdoodle8.mods.galacticraft.planets.venus.blocks.BlockBasicVenus=true
+    B:net.minecraft.block.Block=true
+    B:net.minecraft.block.BlockBone=true
+    B:net.minecraft.block.BlockBookshelf=true
+    B:net.minecraft.block.BlockClay=true
+    B:net.minecraft.block.BlockColored=true
+    B:net.minecraft.block.BlockCompressedPowered=true
+    B:net.minecraft.block.BlockConcretePowder=true
+    B:net.minecraft.block.BlockDirt=true
+    B:net.minecraft.block.BlockGlass=true
+    B:net.minecraft.block.BlockGlazedTerracotta=true
+    B:net.minecraft.block.BlockGlowstone=true
+    B:net.minecraft.block.BlockGrass=true
+    B:net.minecraft.block.BlockGravel=true
+    B:net.minecraft.block.BlockHardenedClay=true
+    B:net.minecraft.block.BlockHay=true
+    B:net.minecraft.block.BlockIce=true
+    B:net.minecraft.block.BlockMelon=true
+    B:net.minecraft.block.BlockMycelium=true
+    B:net.minecraft.block.BlockNetherBrick=true
+    B:net.minecraft.block.BlockNetherrack=true
+    B:net.minecraft.block.BlockNewLeaf=true
+    B:net.minecraft.block.BlockNewLog=true
+    B:net.minecraft.block.BlockObserver=true
+    B:net.minecraft.block.BlockObsidian=true
+    B:net.minecraft.block.BlockOldLeaf=true
+    B:net.minecraft.block.BlockOldLog=true
+    B:net.minecraft.block.BlockOre=true
+    B:net.minecraft.block.BlockPackedIce=true
+    B:net.minecraft.block.BlockPlanks=true
+    B:net.minecraft.block.BlockPrismarine=true
+    B:net.minecraft.block.BlockQuartz=true
+    B:net.minecraft.block.BlockRedSandstone=true
+    B:net.minecraft.block.BlockRedstoneLight=true
+    B:net.minecraft.block.BlockRedstoneOre=true
+    B:net.minecraft.block.BlockRotatedPillar=true
+    B:net.minecraft.block.BlockSand=true
+    B:net.minecraft.block.BlockSandStone=true
+    B:net.minecraft.block.BlockSeaLantern=true
+    B:net.minecraft.block.BlockSilverfish=true
+    B:net.minecraft.block.BlockSlime=true
+    B:net.minecraft.block.BlockSnowBlock=true
+    B:net.minecraft.block.BlockSponge=true
+    B:net.minecraft.block.BlockStainedGlass=true
+    B:net.minecraft.block.BlockStainedHardenedClay=true
+    B:net.minecraft.block.BlockStone=true
+    B:net.minecraft.block.BlockStoneBrick=true
+    B:net.minecraft.block.BlockWorkbench=true
+    B:stevekung.mods.moreplanets.blocks.BlockPolishedSpaceDecoration=true
+    B:stevekung.mods.moreplanets.module.moons.koentus.blocks.BlockKoentus=true
+    B:stevekung.mods.moreplanets.module.planets.chalos.blocks.BlockChalos=true
+    B:stevekung.mods.moreplanets.module.planets.chalos.blocks.BlockChalosCraftingTable=true
+    B:stevekung.mods.moreplanets.module.planets.chalos.blocks.BlockCheeseDirt=true
+    B:stevekung.mods.moreplanets.module.planets.chalos.blocks.BlockCheeseSpore=true
+    B:stevekung.mods.moreplanets.module.planets.chalos.blocks.BlockCheeseSporeStem=true
+    B:stevekung.mods.moreplanets.module.planets.diona.blocks.BlockAlbetiusWormEgg=true
+    B:stevekung.mods.moreplanets.module.planets.diona.blocks.BlockDiona=true
+    B:stevekung.mods.moreplanets.module.planets.diona.blocks.BlockGlowingIronBlock=true
+    B:stevekung.mods.moreplanets.module.planets.diona.blocks.BlockInfectedCrystallizePlanks=true
+    B:stevekung.mods.moreplanets.module.planets.fronos.blocks.BlockCandyCane1=true
+    B:stevekung.mods.moreplanets.module.planets.fronos.blocks.BlockCandyCane2=true
+    B:stevekung.mods.moreplanets.module.planets.fronos.blocks.BlockFronos=true
+    B:stevekung.mods.moreplanets.module.planets.fronos.blocks.BlockFronosDirt=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockInfectedClay=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockInfectedDirt=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockInfectedGravel=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockInfectedMelon=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockInfectedPackedIce=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockInfectedPrismarine=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockInfectedSeaLantern=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockInfectedSponge=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockNibiru=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockNibiruBookshelf=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockNibiruCraftingTable=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockNibiruLog=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockNibiruPlanks=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockNibiruSandstone=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockNibiruSilverfish=true
+    B:stevekung.mods.moreplanets.module.planets.nibiru.blocks.BlockPurifyGravel=true
+    B:stevekung.mods.moreplanets.util.blocks.BlockBaseMP=true
+    B:stevekung.mods.moreplanets.util.blocks.BlockFallingMP=true
+    B:"team.chisel.Features$33$1"=true
+    B:"team.chisel.Features$34$1"=true
+    B:"team.chisel.Features$35$1"=true
+    B:"team.chisel.Features$51$1"=true
+    B:"team.chisel.Features$59$1"=true
+    B:"team.chisel.Features$76"=true
+    B:"team.chisel.Features$8$1"=true
+    B:team.chisel.common.block.BlockCarvable=true
+    B:team.chisel.common.block.BlockCarvableCarpet=true
+}
+
+
 "integration settings" {
     B:ShowBitsInJEI=false
     B:enableMCMultipart=true
