--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -120,6 +120,9 @@ crafting {
     B:micdoodle8.mods.galacticraft.planets.asteroids.blocks.BlockBasicAsteroids=true
     B:micdoodle8.mods.galacticraft.planets.mars.blocks.BlockBasicMars=true
     B:micdoodle8.mods.galacticraft.planets.venus.blocks.BlockBasicVenus=true
+    B:morph.avaritia.block.BlockCompressedCraftingTable=true
+    B:morph.avaritia.block.BlockDoubleCompressedCraftingTable=true
+    B:morph.avaritia.block.BlockResource=true
     B:net.minecraft.block.Block=true
     B:net.minecraft.block.BlockBone=true
     B:net.minecraft.block.BlockBookshelf=true
