--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -11,7 +11,7 @@ world-71516281 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=fuel
+    S:filterText=@modular
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
