--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -3,17 +3,10 @@
 ~CONFIG_VERSION: 0.1.0
 
 world-2060703100 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=false
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
     S:filterText=
-
-    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
@@ -27,7 +20,7 @@ world-71516281 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=oil
+    S:filterText=rocket
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
@@ -40,17 +33,10 @@ world1544803905 {
 
 
 world542713385 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=false
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
     S:filterText=
-
-    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
