--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -106,6 +106,21 @@ crafting {
     B:com.blakebr0.extendedcrafting.block.BlockBasic=true
     B:com.blakebr0.extendedcrafting.block.BlockStorage=true
     B:com.blakebr0.extendedcrafting.block.BlockTrimmed=true
+    B:com.blakebr0.mysticalagradditions.blocks.BlockSpecial=true
+    B:com.blakebr0.mysticalagradditions.blocks.BlockStorage=true
+    B:com.blakebr0.mysticalagriculture.blocks.BlockAccelerator=true
+    B:com.blakebr0.mysticalagriculture.blocks.BlockEssenceCoal=true
+    B:com.blakebr0.mysticalagriculture.blocks.BlockIngotStorage=true
+    B:com.blakebr0.mysticalagriculture.blocks.BlockStorage=true
+    B:com.blakebr0.mysticalagriculture.blocks.BlockWitherproofBlock=true
+    B:com.blakebr0.mysticalagriculture.blocks.ore.BlockInferiumOre=true
+    B:com.blakebr0.mysticalagriculture.blocks.ore.BlockProsperityOre=true
+    B:com.blakebr0.mysticalagriculture.blocks.soulstone.BlockSoulstone=true
+    B:com.brandon3055.brandonscore.blocks.BlockMobSafe=true
+    B:"com.brandon3055.draconicevolution.DEFeatures$1"=true
+    B:com.brandon3055.draconicevolution.blocks.DraconiumBlock=true
+    B:com.brandon3055.draconicevolution.blocks.DraconiumOre=true
+    B:com.brandon3055.draconicevolution.blocks.ItemDislocationInhibitor=true
     B:com.jaquadro.minecraft.storagedrawers.block.BlockTrim=true
     B:com.jolteffect.thermalsolars.block.BlockEnderBlock=true
     B:com.jolteffect.thermalsolars.block.BlockEnderOreEnd=true
