--- a/config/jei/bookmarks.ini
+++ b/config/jei/bookmarks.ini
@@ -1,1 +1,2 @@
-T:{id:"galacticraftcore:engine",Count:1b,Damage:0s}
+T:{id:"galacticraftcore:engine",Count:1b,Damage:1s}
+T:{id:"galacticraftplanets:rocket_t2",Count:1b,Damage:0s}
