first spawn eggs

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -185,6 +185,7 @@ crafting {
     B:net.minecraft.block.BlockStone=true
     B:net.minecraft.block.BlockStoneBrick=true
     B:net.minecraft.block.BlockWorkbench=true
+    B:ovh.corail.tombstone.block.BlockDarkMarble=true
     B:stevekung.mods.moreplanets.blocks.BlockPolishedSpaceDecoration=true
     B:stevekung.mods.moreplanets.module.moons.koentus.blocks.BlockKoentus=true
     B:stevekung.mods.moreplanets.module.planets.chalos.blocks.BlockChalos=true
