--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -20,7 +20,7 @@ world-71516281 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=@modular
+    S:filterText=flux
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
