--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -12,6 +12,7 @@ world-2060703100 {
 
 
 world-71516281 {
+    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
 
     # Give items instead of showing the recipe.
@@ -19,7 +20,7 @@ world-71516281 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=rocket
+    S:filterText=naqu
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
