--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -128,6 +128,8 @@ crafting {
     B:com.jolteffect.thermalsolars.block.BlockLunarOreNether=true
     B:com.jolteffect.thermalsolars.block.BlockTitaniumBlock=true
     B:com.jolteffect.thermalsolars.block.BlockTitaniumOre=true
+    B:gcewing.sg.block.NaquadahBlock=true
+    B:gcewing.sg.block.NaquadahOreBlock=true
     B:micdoodle8.mods.galacticraft.core.blocks.BlockBasic=true
     B:micdoodle8.mods.galacticraft.core.blocks.BlockBasicMoon=true
     B:micdoodle8.mods.galacticraft.core.blocks.BlockConcealedRedstone=true
