--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -130,6 +130,8 @@ crafting {
     B:com.jolteffect.thermalsolars.block.BlockTitaniumOre=true
     B:gcewing.sg.block.NaquadahBlock=true
     B:gcewing.sg.block.NaquadahOreBlock=true
+    B:li.cil.oc.common.block.ChameliumBlock=true
+    B:li.cil.oc.common.block.FakeEndstone=true
     B:micdoodle8.mods.galacticraft.core.blocks.BlockBasic=true
     B:micdoodle8.mods.galacticraft.core.blocks.BlockBasicMoon=true
     B:micdoodle8.mods.galacticraft.core.blocks.BlockConcealedRedstone=true
@@ -230,6 +232,7 @@ crafting {
     B:"team.chisel.Features$8$1"=true
     B:team.chisel.common.block.BlockCarvable=true
     B:team.chisel.common.block.BlockCarvableCarpet=true
+    B:xyz.vsngamer.elevator.blocks.BlockElevator=true
 }
 
 
