--- a/config/sgcraft.cfg
+++ b/config/sgcraft.cfg
@@ -109,6 +109,11 @@ naquadah {
 }
 
 
+opencomputers {
+    D:wirelessRebroadcastStrength=50.0
+}
+
+
 options {
     B:addOresToExistingWorlds=false
     I:chunkLoadingRange=1
@@ -131,6 +136,7 @@ recipes {
     B:naquadahBlock=true
     B:naquadahIngot=true
     B:naquadahIngotFromBlock=true
+    B:ocInterfaceBlock=true
     B:pegasus_upgrade=true
     B:pegasus_upgrade_require_crystal=true
     B:sgBaseBlock=true
